# zen-remote

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.adoc  meson.build
.github/workflows/: test.yaml
client/: CMakeLists.txt  session.cc  session.h
core/: common.h  logger.cc  logger.h  pch.h
include/zen-remote/: logger.h  loop.h  remote.h  signal.h
include/zen-remote/client/: camera.h  gl-buffer.h  remote.h  rendering-unit.h  resource-pool.h  session.h  virtual-object.h
include/zen-remote/server/: buffer.h  channel.h  gl-base-technique.h  gl-buffer.h  gl-program.h  gl-sampler.h  gl-shader.h  gl-texture.h  gl-vertex-array.h  peer-manager.h  peer.h  remote.h  rendering-unit.h  session.h  virtual-object.h
include/zen/display-system/remote/: client.h  server.h
include/zen/display-system/remote/core/: logger.h  loop.h
protos/: CMakeLists.txt  common.proto  gl-base-technique.proto  gl-buffer.proto  gl-program.proto  gl-sampler.proto  gl-shader.proto  gl-texture.proto  gl-vertex-array.proto  peer.proto  ping.proto  rendering-unit.proto  session.proto  virtual-object.proto
server/: CMakeLists.txt  session.cc  session.h
src/: CMakeLists.txt  meson.build  pch.h  test-client.cc
src/client/: CMakeLists.txt  atomic-command-queue.cc  atomic-command-queue.h  command.cc  command.h  discovery-broadcast.cc  discovery-broadcast.h  gl-base-technique.cc  gl-base-technique.h  gl-buffer.cc  gl-buffer.h  gl-program.cc  gl-program.h  gl-sampler.cc  gl-sampler.h  gl-shader.cc  gl-shader.h  gl-texture.cc  gl-texture.h  gl-vertex-array.cc  gl-vertex-array.h  grpc-server.cc  grpc-server.h  remote.cc  remote.h  rendering-unit.cc  rendering-unit.h  resource-container.h  resource-pool.cc  resource-pool.h  resource.h  serial-command-queue.cc  serial-command-queue.h  session-manager.cc  session-manager.h  session.cc  session.h  tmp-rendering-helper.h  virtual-object.cc  virtual-object.h  (+1 more)
src/client/service/: async-service-caller.h  async-service.h  async-session-keepalive-caller.h  async-session-ping-caller.h  async-session-service-caller.h  gl-base-technique.cc  gl-base-technique.h  gl-buffer.cc  gl-buffer.h  gl-program.cc  gl-program.h  gl-sampler.cc  gl-sampler.h  gl-shader.cc  gl-shader.h  gl-texture.cc  gl-texture.h  gl-vertex-array.cc  gl-vertex-array.h  peer.cc  peer.h  rendering-unit.cc  rendering-unit.h  serial-async-caller.h  serial-async-service.h  session.cc  session.h  virtual-object.cc  virtual-object.h
src/core/: common.h  context.h  logger.cc  logger.h  readers-writer-lock.cc  readers-writer-lock.h  types.h
src/core/connection/: packet.h  peer.cc  peer.h
src/pch/: pch.h
src/server/: CMakeLists.txt  async-grpc-caller.h  async-grpc-queue.cc  async-grpc-queue.h  buffer.cc  buffer.h  channel.cc  channel.h  gl-base-technique.cc  gl-base-technique.h  gl-buffer.cc  gl-buffer.h  gl-program.cc  gl-program.h  gl-sampler.cc  gl-sampler.h  gl-shader.cc  gl-shader.h  gl-texture.cc  gl-texture.h  gl-vertex-array.cc  gl-vertex-array.h  job-queue.cc  job-queue.h  job.cc  job.h  loop-notifier.cc  loop-notifier.h  peer-manager.cc  peer-manager.h  peer.cc  peer.h  remote.cc  remote.h  rendering-unit.cc  rendering-unit.h  serial-request-context.cc  serial-request-context.h  session-connection.cc  session-connection.h  (+7 more)
subprojects/: boost-headers.wrap
